# zprecision

./: CMakeLists.txt  CMakePresets.json
zprecision/: CMakeLists.txt  zprecision.cpp  zprecision.h
zprecision/shaders/: simple_ps.hlsl  simple_vs.hlsl
